@@ -8,6 +8,7 @@ Oliver Heesakkers
 Patric Cameron
 Geoff Richards
 Raphael Studer
+Matt Williams
 
 Merkaartor uses icons from the Tango Desktop Project 
 (http://tango-freedesktop.org/)
